# Shadowgraphy

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
cmake/: EnableDebugFlags.cmake  ExternalBenchmark.cmake  ExternalGTest.cmake  ExternalOpenSSL.cmake  ShadowConfig.cmake.in  ShadowCustomMacros.cmake
example/: CMakeLists.txt  fpe_example.cpp
example/fpe_go_example/: fpe_example.go  go.mod
shadow/common/: common.cpp  common.h  config.h.in
shadow/fpe/: fpe.cpp  fpe.h  fpe_bench.cpp  fpe_internal.h  fpe_test.cpp
shadow/fpe_export/: fpe_export.cpp  fpe_export_test.cpp
shadow/fpe_go/: cgo_flags_darwin_amd64.go  cgo_flags_darwin_arm64.go  cgo_flags_linux.go  errors.go  fpe.go  fpe_export.h  fpe_test.go  fpe_wrapper.go  fpe_wrapper_test.go  go.mod
